--- a/index.html
+++ b/index.html
@@ -219,3 +219,5 @@ window.smartsupp||(function(d) {
   c.type='text/javascript';c.charset='utf-8';c.async=true;
   c.src='https://www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);
 })(document);-->
+
+<script> console.log("Hello World") </script>
