fixed the other pages

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ window.onclick = function(event) {
   </div>
   <br>This is my personal website and portfolio. 
   <br>
-  <br>Wanna know more or hire me, then see the info at <a href="contact.html" style="color: #2ab7ca">the contact page</a>
+  <br>Wanna know more or hire me, then see the info at <a href="/contact.html" style="color: #2ab7ca">the contact page</a>
     <br> </p>
       </div>
 
