--- a/seeme.html
+++ b/seeme.html
@@ -1,13 +1,16 @@
-<!HTML>
 <style link="style.css"></style>
+
+<!HTML>
 <head>
 <body>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>  SeeME The Mobile App For Blind And Visueled Imperd </title>
 <script src="seeme-js.js"> </script>
 <h1> SeeME The Mobile App For Blind And Visueled Imperd </h1>
 <div class="seeme" id="seeme-id">
-<h1>Hello</h1>
+<h1></h1>
 </div>
+
   <div class="start">
   <p> <span class=seeme-1>See</span>
     <p> <span class=seeme-2>ME</span>
@@ -19,6 +22,7 @@
     <p> <span class=seeme-6>And</span>
     <p> <span class=seeme-5>Visueled</span>
     <p> <span class=seeme-1>Imperd</span>
+    <p> is an mobile app that can recognise objects, colors, faces and distacse using AI, that it will say what it think it is, who it is, how far away it is and what color it is. 
 </div>
 
 </body>
