--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   
     <a href="/">Home</a>
     <a href="/about">About</a>
+    <a href="/seeme.html">SeeME</a>
     <a href="/contact">Contact</a>
   </div>
 </div>
