--- a/seeme.html
+++ b/seeme.html
@@ -1,8 +1,8 @@
 <style link="./style.css"></style>
 
-<!HTML>
-<head>
-<body>
+<html>
+  <head>
+<link rel="icon" href="https://cdn.glitch.com/806c4b29-17a4-4de5-a660-fd1052b17ca6%2FUntitled.png?v=1590743469118">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>  SeeME The Mobile App For Blind And Visueled Imperd </title>
 <script src="seeme-js.js"> </script>
@@ -24,6 +24,4 @@
     <p> <span class=seeme-1>Imperd</span>
     <p> is an mobile app that can recognise objects, colors, faces and distacse using AI, that it will say what it think it is, who it is, how far away it is and what color it is. 
 </div>
-
-</body>
 </head>
