--- a/seeme.html
+++ b/seeme.html
@@ -1,4 +1,4 @@
-<style link="./style.css"></style>
+    <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 
 <html>
   <head>
