--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   
     <a href="/">Home</a>
     <a href="/about">About</a>
-    <a href="/seeme.html">SeeME</a>
+    <a href="/seeme">SeeME</a>
     <a href="/contact">Contact</a>
   </div>
 </div>
