--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ window.onclick = function(event) {
 <tr>
     <tr>
     <td>4</td>
-    <td><span title="The Ugly RAT tool">The Ugly RAT tool (URATT</span></td>
+    <td><span title="The Ugly RAT tool">The Ugly RAT tool (URATT)</span></td>
     <td>Beta 3.4</td>
   </tr>  <tr>
 
