--- a/index.html
+++ b/index.html
@@ -220,4 +220,4 @@ window.smartsupp||(function(d) {
   c.src='https://www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);
 })(document);-->
 
-<script> console.log("Hello World") </script>
+<script> console.log("Hello World, this is a test") </script>
