--- a/SeeME.html
+++ b/SeeME.html
@@ -12,16 +12,8 @@
 </div>
 
   <div class="start">
-  <p> <span class=seeme-1>See</span>
-    <p> <span class=seeme-2>ME</span>
-    <p> <span class=seeme-3>The</span>
-    <p> <span class=seeme-4>Mobile</span>
-    <p> <span class=seeme-1>App</span>
-    <p> <span class=seeme-7>For</span>
-    <p> <span class=seeme-4>Blind</span>
-    <p> <span class=seeme-6>And</span>
-    <p> <span class=seeme-5>Visueled</span>
-    <p> <span class=seeme-1>Imperd</span>
-    <p> is an mobile app that can recognise objects, colors, faces and distacse using AI, that it will say what it think it is, who it is, how far away it is and what color it is. 
+  <p> <span class=seeme-1>See</span> <span class=seeme-2>ME</span> <span class=seeme-3>The</span> <span class=seeme-4>Mobile</span> <span class=seeme-1>App</span> <span class=seeme-7>For</span> <span class=seeme-4>Blind</span> <span class=seeme-6>And</span> <span class=seeme-5>Visueled</span> <span class=seeme-1>Imperd</span>
+      
+ <p> is an mobile app that can recognise objects, colors, faces and distacse using AI, that it will say what it think it is, who it is, how far away it is and what color it is. 
 </div>
 </head>
