--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@ toggle between hiding and showing the dropdown content */
         Looking for my contact info? <br />Well you're on the right
         page
         <br />
-        <br />I will try to respond as fast as poseble
+        <br />I will try to respond as fast as possible
         <br />
         <br />
 </p>
@@ -74,18 +74,18 @@ toggle between hiding and showing the dropdown content */
 <tr>
         <table>
 <h4> How to get a faster response:</h4>
-<h4>Please include this, this gets the chance that I say yes higher
-<h4>1. Include a short project descriptoin and name in the subject. </h4>
-<h4>2. Include the teams emails and what they are responseble for in the mail so I can contact them if I need anything </h4>
+<h4>Please include the following points to increase the chance of me saying yes
+<h4>1. Include a short project description and name in the subject. </h4>
+<h4>2. Include the team's emails and what they are responsible for in the mail so I can contact them if I need anything </h4>
 <h4>3. Include the company name in the subject </h4>
 <h4>4. Include a website link in the mail </h4>
 <h4>5. If you have an ORG number then include it</h4>
 <h4>6. Tell me what your project is about in the mail </h4>
 <h4>7. Include a link to the platform where you chat and give out the jobs, like slack, discord or monday</h4>
-<h4>8. Include what launges you are going to work in (even if i'm not going to work with some of them) </h4>
+<h4>8. Include what languages you are going to work in (even if i'm not going to work with some of them) </h4>
 <h4>9. Tell me what code editor you are using </h4>
 <h4>10. Include the HR and CEO/project manager's email </h4> </pre>
-<h4>11.Include if your a team or a company  </h4>
+<h4>11.Include if you're a team or a company  </h4>
 
 
         </table>
