--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,7 @@
 
         <div id="myDropdown" class="dropdown-content">
           <a href="/">Home</a>
-          <a href="/about">About</a>
-          <a href="/seeme">About SeeME</a>
+          <a href="/seeme.html">SeeME</a>
           <a href="/contact">Contact</a>
         </div>
       </div>
