--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 
   <div id="myDropdown" class="dropdown-content">
   
-    <a href="/">Home</a>
     <a href="/seeme.html">SeeME</a>
     <a href="/contact">Contact</a>
   </div>
@@ -68,7 +67,7 @@ window.onclick = function(event) {
   </div>
   <br>This is my personal website and portfolio. 
   <br>
-  <br>Wanna know more or hire me, then see the info at <a href="/contact.html" style="color: #2ab7ca">the contact page</a>
+  <br>Wanna know more or hire me, then see the info at <a href="/contact" style="color: #2ab7ca">the contact page</a>
     <br> </p>
       </div>
 
