--- a/seeme.html
+++ b/seeme.html
@@ -1,5 +1,9 @@
     <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
- <div class="dropdown">
+ 
+
+<html>
+  <head>
+      <body> <div class="dropdown">
   <button style="float:right" onclick="myFunction()" class="dropbtn">Menu</button>
 
   <div id="myDropdown" class="dropdown-content">
@@ -30,9 +34,7 @@ window.onclick = function(event) {
   }
 }
 </script>
-
-<html>
-  <head>
+      </body>
 <link rel="icon" href="https://cdn.glitch.com/806c4b29-17a4-4de5-a660-fd1052b17ca6%2FUntitled.png?v=1590743469118">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>  SeeME The Mobile App For Blind And Visueled Imperd </title>
