index.html update

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <div id="myDropdown" class="dropdown-content">
   
-    <a href="/seeme.html">SeeME</a>
+    <a href="/software/seeme.html">SeeME</a>
     <a href="/contact">Contact</a>
   </div>
 </div>
@@ -102,7 +102,7 @@ window.onclick = function(event) {
 
   <tr>
     <td>3</td>
-    <td><span title="Trashbunny The Hack Tool">Trashbunny</span></td>
+    <td><span title="Trashbunny">Trashbunny</span></td> /* lägg till vid title: The Hack Tool */
     <td>Beta 1</td>
   </tr>
   
@@ -147,7 +147,7 @@ window.onclick = function(event) {
   </tr>
   <tr>
     <td>10</td>
-    <td><span title=" SeeME the scanner for blind or visueled imperd"><a href="SeeME" style="color: #cc0000">SeeME The Mobile App</a></td>
+    <td><span title=" SeeME the scanner for blind or visueled imperd"><a href="/software/seeme.html" style="color: #cc0000">SeeME The Mobile App</a></td>
     <td>5.0</td>
 
   </tr>
