--- a/software/seeme.html
+++ b/software/seeme.html
@@ -1,20 +1,19 @@
-    /*<link rel="stylesheet" type="text/css" href="style.css" media="screen" />*/
-
+/*   link rel="stylesheet" type="text/css" href="style.css" media="screen" />  */
 
 <html>
-  <head>
-      <body> <div class="dropdown">
-  <button style="float:right" onclick="myFunction()" class="dropbtn">Menu</button>
+<head>
+<body> <div class="dropdown">
+<button style="float:right" onclick="myFunction()" class="dropbtn">Menu</button>
 
-  <div id="myDropdown" class="dropdown-content">
-  
+<div id="myDropdown" class="dropdown-content">
+
     <a href="/">Home</a>
     <a href="/contact">Contact</a>
-  </div>
+</div>
 </div>
 
 <script>
-/* When the user clicks on the button, 
+/*   When the user clicks on the button, 
 toggle between hiding and showing the dropdown content */
 function myFunction() {
   document.getElementById("myDropdown").classList.toggle("show");
@@ -26,15 +25,15 @@ window.onclick = function(event) {
     var dropdowns = document.getElementsByClassName("dropdown-content");
     var i;
     for (i = 0; i < dropdowns.length; i++) {
-      var openDropdown = dropdowns[i];
-      if (openDropdown.classList.contains('show')) {
+        var openDropdown = dropdowns[i];
+if (openDropdown.classList.contains('show')) {
         openDropdown.classList.remove('show');
-      }
+}
     }
-  }
+}
 }
 </script>
-      </body>
+</body>
 <link rel="icon" href="https://cdn.glitch.com/806c4b29-17a4-4de5-a660-fd1052b17ca6%2FUntitled.png?v=1590743469118">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>  SeeME The Mobile App For Blind And Visueled Imperd </title>
