--- a/software/seeme.html
+++ b/software/seeme.html
@@ -1,4 +1,4 @@
-/*   link rel="stylesheet" type="text/css" href="style.css" media="screen" />  */
+<link rel="stylesheet" type="text/css" href="style.css" media="screen" /> 
 
 <html>
 <head>
