--- a/software/trashbumny.html
+++ b/software/trashbumny.html
@@ -36,17 +36,18 @@ if (openDropdown.classList.contains('show')) {
 </body>
 <link rel="icon" href="https://cdn.glitch.com/806c4b29-17a4-4de5-a660-fd1052b17ca6%2FUntitled.png?v=1590743469118">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>  SeeME The Mobile App For Blind And Visueled Imperd </title>
+<title> Trashbunny The Hack Tool </title>
 <script src="seeme-js.js"> </script>
-<h1> SeeME The Mobile App For Blind And Visueled Imperd </h1>
+<h1> Trashbunny The Hack Tool </h1>
 <div class="seeme" id="seeme-id">
 <h1></h1>
 </div>
 
-  <div class="start">
-  <p> <span class=seeme-1>See</span> <span class=seeme-2>ME</span> <span class=seeme-3>The</span> <span class=seeme-4>Mobile</span> <span class=seeme-1>App</span> <span class=seeme-7>For</span> <span class=seeme-4>Blind</span> <span class=seeme-6>And</span> <span class=seeme-5>Visueled</span> <span class=seeme-1>Imperd</span>
-      
- <p> is an mobile app that can recognise objects, colors, faces and distacse using AI, that it will say what it think it is, who it is, how far away it is and what color it is. 
+<div class="start">
+<p> <span class=seeme-1>Trashbunny</span> <span class=seeme-2>The</span> <span class=seeme-3>Hack</span> <span class=seeme-4>Tool</span> 
+
+<p> Trashbunny is a white hack pen-test tool with DDOS, DoS, SQLmap and RAT tools, it's made in C++, javascript and python. It's under development and private beta. I think there will be a public beta in abou 2 to 4 months. 
+<b> <span class=seeme-5> Current version: beta 1.2.51. Expected version for public release: 1.20.5
 </div>
 
 
