--- a/software/trashbunny.html
+++ b/software/trashbunny.html
@@ -2,6 +2,7 @@
 
 <html>
 <head>
+<script>console.log("hello world")</script>
 <body> <div class="dropdown">
 <button style="float:right" onclick="myFunction()" class="dropbtn">Menu</button>
 
