--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ window.onclick = function(event) {
 
   <tr>
     <td>3</td>
-    <td><span title="Trashbunny">Trashbunny</span></td> /* lägg till vid title: The Hack Tool */
+    <td><span title="Trashbunny">Trashbunny</span></td>
     <td>Beta 1</td>
   </tr>
   
