--- a/software/trashbunny.html
+++ b/software/trashbunny.html
@@ -47,7 +47,7 @@ if (openDropdown.classList.contains('show')) {
 <div class="start">
 <p> <span class=seeme-1>Trashbunny</span> <span class=seeme-2>The</span> <span class=seeme-3>Hack</span> <span class=seeme-4>Tool</span> 
 
-<p> Trashbunny is a white hack pen-test tool with DDOS, DoS, SQLmap and RAT tools, it's made in C++, javascript and python. It's under development and private beta. I think there will be a public beta in abou 2 to 4 months.
+<p> Trashbunny is a white hack pen-test tool with DDOS, DoS, SQLmap and RAT tools, it's made in C++, javascript and python. It's under development and private beta. I think there will be a public beta in about 2 to 4 months.
 <b>
 <p>
 <b> <span class=seeme-5> Current version: beta 1.2.51. Expected version for public release: 1.20.5 </span> 
