--- a/software.html
+++ b/software.html
@@ -70,7 +70,7 @@
 
   <tr>
     <td>9</td>
-    <td><span title="BaseHighEncryptorDescyptor"><a href="/software/bhed.html" style="color: #985512>Base  High Encrypter and Decrypter aka BHED</td>
+    <td><span title="BaseHighEncryptorDescyptor"><a href="/software/bhed" style="color: #985512>Base the High Encrypter and Decrypter aka BHED</a> </td>
     <td> 1.92 </td>
 
   </tr>
