--- a/software.html
+++ b/software.html
@@ -61,7 +61,7 @@
   </tr>
 
   <tr>
-    <td><span title="BaseHighEncryptorDescyptor"><a href="/software/bhed" style="color: #985512>Base the High Encrypter and Decrypter aka BHED</a> </span> </td>
+    <td><span title="BaseHighEncryptorDescyptor"><a href="/software/bhed" style="color: #985512">Base the High Encrypter and Decrypter aka BHED</a> </span> </td>
     <td> 1.92 </td>
 
 </tr>
