--- a/software.html
+++ b/software.html
@@ -1,3 +1,4 @@
+<style link="style.css"></style>
 <head>
 <body>
 <title>Software List</title>
@@ -7,7 +8,6 @@
   </h2>
   <p><table>
   <tr>
-    <th>#</th>
     <th>Software</th> 
     <th>Version</th>
   
