--- a/software.html
+++ b/software.html
@@ -3,41 +3,41 @@
 <body>
 <title>Software List</title>
 <div class="projects">
-  <h2>
-    Projects:
-  </h2>
-  <p><table>
-  <tr>
-    <th>Software</th> 
+<h2>
+    Software List:
+</h2>
+<p><table>
+<tr>
+    <th>Software name</th> 
     <th>Version</th>
-  
-  
-  </tr><tr>
+
+
+</tr><tr>
 
 
     <td> <span title="A Start using Unity Game Engine">A Star, a game using Unity Game Engine</span></td>
 <td>Private beta 5.2</td>
 
 
-  </tr>
-  <tr>
+</tr>
+<tr>
     <td><span title="Benitorex CTF">Benitorex CTF</span></td> 
     <td>1 but 2 in progress</td>
-  </tr>
+</tr>
 
 
-  <tr>
+<tr>
     <td><span title="Trashbunny">Trashbunny the pen-test tool</span></td>
     <td>Beta 1</td>
     
-  </tr>
-  
+</tr>
+
 
 <tr>
     <tr>
     <td><span title="the Ugly RAT tool">The Ugly RAT tool aka URAT</span></td>
     <td>Beta 3.4</td>
-  </tr>  <tr>
+</tr>  <tr>
 
 
     <td>Eden the spammer</td>
@@ -45,22 +45,22 @@
     </tr> 
 
 
-  <tr>
+<tr>
     <td><span title="UnderBox encrypter decrypter">Underbox Encrypter and Decrypter aka UED</span></td>
     <td>public beta 1.0</td>
-  </tr>
+</tr>
 
 
-  <tr>
+<tr>
     <td><span title="Canium the WIFI Scanner exploder"> Canium the WIFI scanner for Network Admins and Pen-testers</span></td>
     <td>0.2</td>
-  </tr>
-  <tr>
+</tr>
+<tr>
     <td><span title="Shoggoth with 10 tools in one">Shoggoth the 10 job tool for programmers and designers</span></td>
     <td>0.31</td>
-  </tr>
+</tr>
 
-  <tr>
+<tr>
     <td><span title="BaseHighEncryptorDescyptor"><a href="/software/bhed" style="color: #985512">Base the High Encrypter and Decrypter aka BHED</a> </span> </td>
     <td> 1.92 </td>
 
