added the software link to the menu

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <div id="myDropdown" class="dropdown-content">
   
-    <a href="/software/seeme.html">SeeME</a>
+    <a href="/software.html">Software List</a>
     <a href="/contact">Contact</a>
   </div>
 </div>
@@ -104,7 +104,7 @@ window.onclick = function(event) {
     <td>3</td>
     <td><span title="Trashbunny">Trashbunny</span></td>
     <td>Beta 1</td>
-    
+
   </tr>
   
 
