--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 
         <div id="myDropdown" class="dropdown-content">
           <a href="/">Home</a>
-          <a href="/seeme">SeeME</a>
+          <a href="/software.html">Software List</a>
         </div>
       </div>
 
