--- a/software.html
+++ b/software.html
@@ -1,6 +1,53 @@
 <style link="style.css"></style>
 <head>
 <body>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+
+      <div class="dropdown">
+        <button style="float:right" onclick="myFunction()" class="dropbtn">
+          Menu
+        </button>
+        
+
+        <div id="myDropdown" class="dropdown-content">
+        <a href="/">Home</a>
+        <a href="/contact.html">Contact</a>
+        <a href="/software/.html">A Star</a>
+        <a href="/software/benitorex-ctf.html">Benitorex</a>
+        <a href="/software/bhed.html">Base High Encypter and Decrypter</a>
+        <a href="/software/Canium.html">Canium</a>
+        <a href="/software/seeme.html">SeeME</a>
+        <a href="/software/shoggoth.html">Shoggoth</a>
+        <a href="/software/trashbunny.html">Trashbunny</a>
+        <a href="/software/underbox-ed.html">Underbox ED</a>
+        <a href="/software/urat.html">the Ugly RAT tool</a>
+
+
+        </div>
+      </div>
+
+      <script>
+        /* When the user clicks on the button, 
+toggle between hiding and showing the dropdown content */
+        function myFunction() {
+          document.getElementById("myDropdown").classList.toggle("show");
+        }
+
+        // Close the dropdown if the user clicks outside of it
+        window.onclick = function(event) {
+          if (!event.target.matches(".dropbtn")) {
+            var dropdowns = document.getElementsByClassName("dropdown-content");
+            var i;
+            for (i = 0; i < dropdowns.length; i++) {
+              var openDropdown = dropdowns[i];
+              if (openDropdown.classList.contains("show")) {
+                openDropdown.classList.remove("show");
+              }
+            }
+          }
+        };
+      </script>
 <title>Software List</title>
 <div class="projects">
 <h2>
