--- a/software.html
+++ b/software.html
@@ -4,10 +4,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 
-      <div class="dropdown">
-        <button style="float:right" onclick="myFunction()" class="dropbtn">
-          Menu
-        </button>
+<div class="dropdown">
+        <button style="float:right" onclick="menu()" class="dropbtn">Menu</button>
         
 
         <div id="myDropdown" class="dropdown-content">
@@ -25,29 +23,29 @@
 
 
         </div>
-      </div>
+</div>
 
-      <script>
+<script>
         /* When the user clicks on the button, 
 toggle between hiding and showing the dropdown content */
-        function myFunction() {
-          document.getElementById("myDropdown").classList.toggle("show");
+        function menu() {
+document.getElementById("myDropdown").classList.toggle("show");
         }
 
         // Close the dropdown if the user clicks outside of it
         window.onclick = function(event) {
-          if (!event.target.matches(".dropbtn")) {
+if (!event.target.matches(".dropbtn")) {
             var dropdowns = document.getElementsByClassName("dropdown-content");
             var i;
             for (i = 0; i < dropdowns.length; i++) {
-              var openDropdown = dropdowns[i];
-              if (openDropdown.classList.contains("show")) {
+var openDropdown = dropdowns[i];
+if (openDropdown.classList.contains("show")) {
                 openDropdown.classList.remove("show");
-              }
+}
             }
-          }
+}
         };
-      </script>
+</script>
 <title>Software List</title>
 <div class="projects">
 <h2>
