--- a/software.html
+++ b/software.html
@@ -11,7 +11,7 @@
         <div id="myDropdown" class="dropdown-content">
         <a href="/">Home</a>
         <a href="/contact.html">Contact</a>
-        <a href="/software/.html">A Star</a>
+        <a href="/software/a-star.html">A Star</a>
         <a href="/software/benitorex-ctf.html">Benitorex</a>
         <a href="/software/bhed.html">Base High Encypter and Decrypter</a>
         <a href="/software/Canium.html">Canium</a>
