--- a/software.html
+++ b/software.html
@@ -41,6 +41,7 @@ if (!event.target.matches(".dropbtn")) {
 var openDropdown = dropdowns[i];
 if (openDropdown.classList.contains("show")) {
                 openDropdown.classList.remove("show");
+console.log("Menu button pressed")
 }
             }
 }
