--- a/software/a-star.html
+++ b/software/a-star.html
@@ -48,7 +48,7 @@ if (openDropdown.classList.contains('show')) {
       
  <p> is an mobile app that can recognise objects, colors, faces and distacse using AI, that it will say what it think it is, who it is, how far away it is and what color it is. 
 </div>
-
+<iframe frameborder="0" src="https://itch.io/embed/720182" width="552" height="167"><a href="https://pajsen.itch.io/a-star">A Star by Pajsen</a></iframe>
 
 <style>
 h1 {
