--- a/software.html
+++ b/software.html
@@ -60,7 +60,11 @@ console.log("Menu button pressed")
 
 
 </tr><tr>
+<tr>
+    <td><span title="Pass The Particle"><a href="instagram.com/dev.pajsen" style="color: #cc0000">Pass The Particle</a></td>
+    <td>5.0</td>
 
+</tr>
 
     <td> <span title="A Start using Unity Game Engine">A Star, a game using Unity Game Engine</span></td>
 <td>Private beta 5.2</td>
