--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 <link rel="icon" href="https://cdn.glitch.com/806c4b29-17a4-4de5-a660-fd1052b17ca6%2FUntitled.png?v=1590743469118">
-    <title>Pajsen's Portfolio</title>
+    <title>C :\>root/pajsen/portfoilio</title>
   
 
 <!DOCTYPE html>
