Added a link to a beta website
I'm working on a console.log website. The link has been added

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   
     <a href="/software.html">Software List</a>
     <a href="/contact">Contact</a>
+    <a href="https://pajsen-portfolio.glitch.me">Console.log website</a>
+
   </div>
 </div>
 
