Added a link to a beta website
I'm working on a console.log website. The link has been added

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@ window.onclick = function(event) {
     <td>1</td>
 
 
-    <td> <span title="A Start using Unity Game Engine">A Star</span></td>
-  <td>2000</td>
+    <td> <span title="Console.log website">Console.log Website</span></td>
+  <td>Public beta: 4.5</td>
 
 
   </tr>
