--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ window.onclick = function(event) {
     <td>1</td>
 
 
-    <td> <span title="Console.log website" href="https://pajsen-portfolio.glitch.me/" style="color: #cc0000">Console.log Website</span></td>
+    <td><span title="Console.log Website"><a href="https://pajsen-portfolio.glitch.me" style="color: #cc0000">Console.log Website</a></td>
   <td>Public beta: 4.5</td>
 
 
