--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
+<meta name="google-site-verification" content="mN0DemTmB7oP4qEmGZVtM1EhSksHRT1tX_oBZmr7E1M" />
 <body>
     <title>C :\>root/pajsen/portfoilio</title>
 
