--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ window.onclick = function(event) {
     <p> <span class=hr6>as</span>
     <p> <span class=hr7>Pajsen</span>
 </div>
-
+    </head>
   I'm a developer, music artist, web developer and game developer.
   I'm the founder of Pajsen Media and Benitorex. 
   <br>My main programming languages are C#, HTML, CSS, Javascript, Java, Swift. OBJ C, Kojo and Python
