--- a/software.html
+++ b/software.html
@@ -61,7 +61,7 @@ console.log("Menu button pressed")
 
 </tr><tr>
 <tr>
-    <td><span title="Pass The Particle"><a href="instagram.com/dev.pajsen" style="color: #cc0000">Pass The Particle</a></td>
+    <td><span title="Pass The Particle"><a href="https://instagram.com/dev.pajsen" style="color: #cc0000">Pass The Particle</a></td>
     <td>5.0</td>
 
 </tr>
