--- a/discord/ascii/index.html
+++ b/discord/ascii/index.html
@@ -5,7 +5,7 @@
 
 <script>
   function website() {
-  window.location.href("https://acf-coding.github.io/discord/ascii/")
+  window.location.replace("https://acf-coding.github.io/discord/ascii/")
    
   }
   
