--- a/discord/ascii/index.html
+++ b/discord/ascii/index.html
@@ -1,7 +1,7 @@
 <h1> Hello </h1>
 <h2> ACF Coding is now the owners of ASCII. </h2>
 <h2> This page will be updated when the bot is done </h2>
-<button onclick="website">Take me to the new website</button>
+<button onclick="website()">Take me to the new website</button>
 
 <script>
   function website() {
