🛫🐒 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <div id="myDropdown" class="dropdown-content">
   
-    <a href="/software.html">Software List</a>
+    <a href="/software">Software List</a>
     <a href="/contact">Contact</a>
     <a href="https://pajsen-portfolio.glitch.me">Console.log website</a>
 
@@ -44,9 +44,9 @@
     <p> <span class="hr4">I'm</span> </p>
     <p> <span class="hr5">known</span> </p>
     <p> <span class="hr6">as</span> </p>
-    <p> <span class="hr7">Pajsen</span> </p>
-  I'm a developer, music artist, web developer and game developer.
-  I'm the founder of Pajsen Media and Benitorex. 
+    <p> <span class="hr7">Pajsen and Lucid_Coder</span> </p>
+  I'm a developer, web developer and game developer.
+  I'm the founder of Pajsen Media and Ascii Development. 
   <br>My main programming languages are C#, HTML, CSS, Javascript, Java, Swift. OBJ C, Kojo and Python
   <br>
   </div>
@@ -134,7 +134,7 @@
   </tr>
   <tr>
     <td>10</td>
-    <td><span title=" SeeME the scanner for blind or visueled imperd"><a href="/software/seeme.html" style="color: #cc0000">SeeME The Mobile App</a></span></td>
+    <td><span title=" SeeME the scanner for blind or visueled imperd"><a href="/software/seeme" style="color: #cc0000">SeeME The Mobile App</a></span></td>
     <td>5.0</td>
 
   </tr>
