--- a/software/index.html
+++ b/software/index.html
@@ -10,16 +10,16 @@
 
         <div id="myDropdown" class="dropdown-content">
         <a href="/">Home</a>
-        <a href="/contact.html">Contact</a>
-        <a href="/software/a-star.html">A Star</a>
-        <a href="/software/benitorex-ctf.html">Benitorex</a>
-        <a href="/software/bhed.html">Base High Encypter and Decrypter</a>
-        <a href="/software/Canium.html">Canium</a>
-        <a href="/software/seeme.html">SeeME</a>
-        <a href="/software/shoggoth.html">Shoggoth</a>
-        <a href="/software/trashbunny.html">Trashbunny</a>
-        <a href="/software/underbox-ed.html">Underbox ED</a>
-        <a href="/software/urat.html">the Ugly RAT tool</a>
+        <a href="/contact">Contact</a>
+        <a href="/software/a-star">A Star</a>
+        <a href="/software/benitorex-ctf">Benitorex</a>
+        <a href="/software/bhed">Base High Encypter and Decrypter</a>
+        <a href="/software/Canium">Canium</a>
+        <a href="/software/seeme">SeeME</a>
+        <a href="/software/shoggoth">Shoggoth</a>
+        <a href="/software/trashbunny">Trashbunny</a>
+        <a href="/software/underbox-ed">Underbox ED</a>
+        <a href="/software/urat">the Ugly RAT tool</a>
         <a href="https://instagram.com/dev.pajsen">PASS The Particle</a>
 
 
