👞🎸 Updated with Glitch

--- a/contact/index.html
+++ b/contact/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+        <link rel="stylesheet" type="text/css" href="\../style.css" media="screen" />
     <!link rel="icon" href="https://cdn.glitch.com/806c4b29-17a4-4de5-a660-fd1052b17ca6%2FUntitled.png?v=1590743469118">
     <meta
       name="google-site-verification"
@@ -47,7 +48,6 @@ toggle between hiding and showing the dropdown content */
       </script>
     </body>
 
-    <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
     <div class="textmain">
 <h3>My contact info</h3>
 <br />
