--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
 <link rel="icon" href="https://cdn.glitch.com/806c4b29-17a4-4de5-a660-fd1052b17ca6%2FUntitled.png?v=1590743469118">
     <title>C: ~\root/pajsen/portfoilio</title>
         <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
-<h1>
-  The website is under going a redesign. Everyting might not be up to date. Check back soon for the new design
-    </h1>
   
 
 <!DOCTYPE html>
@@ -22,7 +19,6 @@
   
     <a href="/software">Software List</a>
     <a href="/contact">Contact</a>
-    <a href="https://pajsen-portfolio.glitch.me">Console.log website</a>
 
   </div>
 </div>
@@ -47,12 +43,11 @@
     <p> <span class="hr7">Pajsen and Lucid_Coder</span> </p>
   I'm a developer, web developer and game developer.
   I'm the founder of Pajsen Media and Ascii Development. 
-  <br>My main programming languages are C#, HTML, CSS, Javascript, Java, Swift. OBJ C, Kojo and Python
+  <br>My main programming languages are C#, HTML, CSS, Javascript, QuaLang and Python
   <br>
   </div>
-  <br>This is my personal website and portfolio. 
   <br>
-  <br>Wanna know more or hire me, then see the info at <a href="/contact" style="color: #2ab7ca">the contact page</a>
+  <br>Wanna know more or hire me, then see my contact infomation at <a href="/contact" style="color: #2ab7ca">the contact page</a>
     <br> 
       </div>
     </head>
